tests/ui/error-codes/E0133.rs
unsafe fn f() { return; }

fn main() {
    f();
    //~^ ERROR E0133
}
